# lp-generator

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  LEARN.md  README.md  docker-compose.yml  main.py  mock_response.json  package-lock.json  package.json  requirements.txt  utils.py
client/: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  index.html  package.json  vercel.json
client/api/v1/: feedback.js  lp_saved.js  stats.js
client/public/: index.html  llms.txt  manifest.json  robots.txt  sitemap.xml
client/scripts/: prerender-seo.mjs
client/src/: App.css  App.jsx  index.css  index.jsx
client/src/config/: api.js  site.js
client/src/context/: ThemeContext.jsx
client/src/seo/: Seo.jsx
client/src/util/: pages.jsx  slug.js
public/: index.html
server/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
server/app/: __init__.py  main.py  mock_response.json
server/app/api/: router.py
server/app/core/: __init__.py  config.py  dependencies.py  security.py
server/app/routers/: feedback.py  learning_paths.py  saved_learning_paths.py  stats.py
server/app/schemas/: feedback.py  learning_path.py  saved_learning_path.py  stats.py
server/app/services/: cache_service.py  counter_service.py  feedback_service.py  learning_path_service.py  saved_lp_service.py
server/tests/: conftest.py  test_main.py  test_routers_feedback.py  test_routers_learning_paths.py  test_routers_saved_learning_paths.py  test_routers_stats.py  test_services_cache.py  test_services_learning_path.py
src/: App.css  App.js  index.css  index.js
src/components/: Form.js  GenerateLp.js  Lp.js
src/components/Button/: Button.jsx  Button.scss
src/components/NavBar/: NavBar.scss
src/components/Searchbar/: Searchbar.jsx  Searchbar.scss
src/pages/404/: 404.jsx
src/pages/HomePage/: HomePage.jsx  HomePage.scss
(+26 files in other folders)
