[project]
name = "lp-generator-backend"
version = "0.1.0"
description = "Learning Path Generator backend API"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.1.8",
    "exceptiongroup>=1.3.1",
    "fastapi>=0.128.8",
    "frozenlist>=1.8.0",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "multidict>=6.7.1",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "python-dotenv>=1.2.1",
    "PyYAML>=6.0.3",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "starlette>=0.49.3",
    "tqdm>=4.67.3",
    "typing_extensions>=4.15.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.39.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
    "yarl>=1.22.0",
]

[tool.uv]
package = false
